Added create user, fixed most bugs to get things operational

--- a/templates/header.ejs
+++ b/templates/header.ejs
@@ -1,6 +1,6 @@
 <html>
   <head>
     <title>Example Form</title>
-    <link rel='stylesheet' type='text/css' href='/autoforms/autoforms.css'>
+    <link rel='stylesheet' type='text/css' href='/css/autoforms.css'>
   </head>
   <body>
