--- a/css/autoforms.css
+++ b/css/autoforms.css
@@ -51,7 +51,7 @@ label {
   font-weight: bold;
   margin-bottom: 10px; }
 
-input[type=text], input[type=password], input[type=email], input[type=tel], input[type=file], input[type=number], input[type=url] {
+input[type=text], input[type=password], input[type=email], input[type=tel], input[type=file], input[type=number], input[type=url], textarea {
   padding: 6px;
   border-radius: 5px;
   width: 100%;
