--- a/scss/autoforms.scss
+++ b/scss/autoforms.scss
@@ -94,7 +94,7 @@ label {
   margin-bottom: 10px;
 }
 
-input[type=text], input[type=password], input[type=email], input[type=tel], input[type=file], input[type=number], input[type=url] {
+input[type=text], input[type=password], input[type=email], input[type=tel], input[type=file], input[type=number], input[type=url], textarea {
   padding: 6px;
   border-radius: 5px;
   width: 100%;
