Added missing text-center/text-left class to text inputs

--- a/scss/autoforms.scss
+++ b/scss/autoforms.scss
@@ -390,8 +390,16 @@ td, th {
   font-weight: bold;
 }
 
+.text-left {
+  text-align: left;
+}
+
 .text-center {
   text-align: center;
+}
+
+.text-right {
+  text-align: right;
 }
 
 button.paging {
