Restricted width of add button

--- a/scss/autoforms.scss
+++ b/scss/autoforms.scss
@@ -157,6 +157,11 @@ select[multiple] {
   padding-right: 10px;
 }
 
+.addButton {
+  width: 150px;
+  margin: auto;
+}
+
 .col-1 {
   flex-grow: 1;
   width: 6.25%;
